[package]
name = "gotrue"
version = "0.1.0"
edition = "2021"
authors = ["Bobbie Soedirgo <bobbie@soedirgo.dev>"]
description = "PostgREST client-side library"
homepage = "https://github.com/spencerbart/gotrue-rs"
repository = "https://github.com/spencerbart/gotrue-rs"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["gotrue", "supabase"]
categories = ["development-tools"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
